# home-automation

./: .dockerignore  Dockerfile  README.md  build.sh
backend/: .dockerignore  .gitignore  Dockerfile  README.md  celerybeat-schedule  entrypoint.sh  entrypoint_celery.sh  example.env  pyproject.toml  test.sh
backend/appliances/door/: __init__.py  admin.py  apps.py  models.py
backend/appliances/door/graphql/: __init__.py  subscriptions.py  types.py
backend/appliances/door/migrations/: 0001_initial.py  0002_auto_20201212_1727.py
backend/appliances/lamp/: __init__.py  admin.py  apps.py  models.py
backend/appliances/lamp/graphql/: __init__.py  mutations.py  subscriptions.py  types.py
backend/appliances/lamp/migrations/: 0001_initial.py  0002_auto_20201209_2000.py
backend/appliances/roller/: __init__.py  admin.py  apps.py  models.py
backend/appliances/roller/graphql/: __init__.py  mutations.py  subscriptions.py  types.py
backend/appliances/roller/migrations/: 0001_initial.py  0002_auto_20201209_1649.py
backend/appliances/socket/: __init__.py  admin.py  apps.py  models.py
backend/appliances/socket/graphql/: __init__.py  mutations.py  subscriptions.py  types.py
backend/appliances/temp_sensor/: __init__.py  admin.py  apps.py  models.py
backend/appliances/window/: __init__.py  admin.py  apps.py  models.py
backend/apps/chat/: apps.py  models.py
backend/apps/home/: __init__.py  admin.py  apps.py  models.py  signals.py  tests.py
backend/apps/mqtt/: __init__.py  apps.py  client.py  signals.py
backend/apps/todo/: admin.py  apps.py  models.py
backend/apps/users/: admin.py  apps.py  forms.py  managers.py  models.py  serializers.py  tests.py  urls.py
backend/core/: asgi.py  celery.py  logging.py  routing.py  schema.py  scripts.py  settings.py  urls.py
backend/templates/: frontend.html
backend/utils/: subscription_signal.py
backend/webpack/: apps.py  loader.py
backend/webpack/templatetags/: webpack.py
(+155 files in other folders)
